<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Unisa Connect</string>

    <!-- Drawer -->
    <string name="dev_email">fdev.developers@gmail.com</string>
    <string name="login_wifi">Login \'Studenti\'</string>
    <string name="menu_mensa">Menu mensa</string>
    <string name="webmail">Webmail</string>
    <string name="servizi_esse3">Servizi studenti</string>
    <string name="rubrica">Rubrica</string>
    <string name="meteo">Meteo</string>
    <string name="orari_lezioni">Orari lezioni</string>
    <string name="news">News</string>
    <string name="map">Mappa</string>
    <string name="recensione">Lascia una recensione</string>
    <string name="contattaci">Problemi? Idee?</string>
    <string name="preferenze">Preferenze</string>
    <!-- end of Drawer -->


    <!-- Esse3 Services -->
    <string name="esse3">Esse3</string>
    <string name="account">Account</string>
    <string name="esse3_pagina_web">ESSE3 Web</string>
    <string name="libretto">Libretto</string>
    <string name="pagamenti">Pagamenti</string>
    <string name="appelli">Appelli</string>
    <string name="biblioteca">Biblioteca</string>
    <string name="presenze">Presenze</string>
    <string name="autocertificazioni">Autocertificazioni</string>
    <!-- end of Esse3 Services -->


    <!-- Wifi Preferenze -->
    <string name="username">Nome utente</string>
    <string name="unisa_mail">username\@studenti.unisa.it</string>
    <string name="non_inserire_at">Non inserire \'\@studenti.unisa.it\'</string>
    <string name="password">password</string>
    <string name="login_automatica">Effettua la login automaticamente quando connessi alla rete Wifi \'Studenti\'</string>
    <string name="save_and_login">Salva/Login</string>
    <string name="save">Salva</string>
    <string name="data_management_info">Per utilizzare i servizi dedicati agli studenti (webmail, libretto, appelli, &#8230;) è necessario inserire la propria username e password. Questi dati vengono memorizzati cifrati su questo dispositivo ed utilizzati unicamente per accedere ai servizi dell\'università.</string>
    <!-- end of Wifi Preferenze -->


    <!-- Dettagli -->
    <string name="dettagli">Dettagli</string>
    <string name="informazioni">Informazioni</string>
    <string name="ufficio">Ufficio</string>
    <string name="email">Email</string>
    <string name="ricevimento">Orario di ricevimento</string>
    <string name="website">Sito Web</string>
    <string name="telefono">Telefono</string>
    <string name="fax">Fax</string>
    <string name="testo_copiato">Copiato negli appunti</string>
    <!-- end of Dettagli -->


    <!-- Timetable -->
    <string name="monday">lun</string>
    <string name="thusday">mar</string>
    <string name="wensday">mer</string>
    <string name="thursday">gio</string>
    <string name="friday">ven</string>
    <string name="_8">08</string>
    <string name="_9">09</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="nome_corso">Nome del corso</string>
    <string name="aula_corso">Aula</string>
    <!-- End of Timetable -->


    <!-- Timetable Aggiungi Corso -->
    <string name="aggiungi_corso">Aggiungi un corso</string>
    <string name="il">Il</string>
    <string name="in">in</string>
    <string name="dalle">dalle</string>
    <string name="alle">alle</string>
    <string name="almeno_una_lezione">Aggiungi almeno una lezione</string>
    <string name="nome_corso_non_vuoto">Il nome del corso non puo\' essere vuoto</string>
    <!-- End of Timetable Aggiungi Corso -->


    <!-- Libretto -->
    <string name="libretto_vuoto">Non sono presenti esami nel libretto</string>
    <string name="cfu_conseguiti">CFU conseguiti:</string>
    <string name="media_ponderata">Media Ponderata:</string>
    <string name="media_aritmetica">Media Aritmetica:</string>
    <string name="parti_da">Parti da:</string>
    <string name="su_30">/30</string>
    <string name="su_110">/110</string>
    <string name="andamenti_esami">Andamento Esami</string>
    <string name="superato_il_con">Superato il %1$s con %2$s/30</string>
    <string name="esame">Esame</string>
    <string name="cfu">CFU</string>
    <string name="voto">Voto</string>
    <string name="ordina_per_nome">Ordina per nome</string>
    <string name="ordina_per_data">Ordina per data</string>
    <!-- end of Libretto -->


    <!-- Pagamenti -->
    <string name="pagamenti_vuoto">Non risultano pagamenti non pervenuti</string>
    <string name="pagamenti_non_disponibili">Impossibile riperire i pagamenti</string>
    <string name="descrizione">Descrizione</string>
    <string name="importo">Importo</string>
    <string name="scadenza">Scadenza</string>
    <!-- end of Pagamenti -->


    <!-- Esse3Scraper -->
    <string name="connesione_esse3">Connessione&#8230;</string>
    <string name="autenticazione_esse3">Autenticazione&#8230;</string>
    <string name="sincronizzazione_esse3">Sincronizzazione&#8230;</string>
    <string name="completamento_esse3">Recupero informazioni completato.</string>
    <!-- end of Esse3Scraper -->


    <!-- Appelli -->
    <string name="appelli_vuoto">Non sono presenti appelli prenotati o disponibili</string>
    <string name="appelli_disponibili">Appelli disponibili</string>
    <string name="appelli_prenotati">Appelli prenotati</string>
    <string name="iscritti">Iscritti: </string>
    <!-- end of Esse3Scraper -->


    <!-- Presenze -->
    <string name="presenze_non_disponibili">Nessun registro presenze trovato</string>
    <!-- end of Presenze -->


    <!-- Mensa -->
    <string name="sincronizzazione_menu">Sincronizzazione menu&#8230;</string>
    <string name="mensa_menu_non_disponibile">Il menu non è al momento disponibile</string>
    <string name="mensa_primi">Primi</string>
    <string name="mensa_secondi">Secondi</string>
    <string name="mensa_contorni">Contorni</string>
    <string name="mensa_frutta">Frutta</string>
    <string name="mensa_centino">Cestino</string>
    <string name="mensa_altro">Altro</string>
    <!-- end of Mensa -->


    <!-- Meteo -->
    <string name="sincronizzazione_meteo">Sincronizzazione meteo&#8230;</string>
    <string name="vento">Vento</string>
    <string name="umidita">Umidità</string>
    <string name="meteo_non_disponibile">Si è verificato un errore nel reperire il meteo</string>
    <string name="previsioni_non_disponibili">Le previsioni non sono al momento disponibili</string>
    <!-- end of Meteo -->


    <!-- News -->
    <string name="sync_news">Carico le news&#8230;</string>
    <!-- end of News -->

    <!-- Map -->
    <!-- end of Map -->


    <!-- WebRadio -->
    <string name="unisound">Unis@und Radio</string>
    <!-- end of WebRadio -->

    <!-- Webmail -->
    <string name="mail_non_lette">Hai %1$d mail non lette</string>
    <string name="controlla_nuove_mail">Controlla nuove mail ogni due ore</string>
    <!-- end of Webmail -->

    <!-- Biblioteca -->
    <string name="cerca_testo_non_vuoto">Il testo da cercare non può essere vuoto</string>
    <string name="libro_non_trovato">Impossibile ottenere i dettagli del libro</string>
    <string name="cerco_libri">Cerco i libri&#8230;</string>
    <string name="cerco_libro">Ottengo dettagli libro&#8230;</string>
    <string name="pagina_web_libro">Pagina Web</string>
    <string name="cerca_libro">Cerca libro</string>
    <string name="risultati_ricerca">Risultati della ricerca</string>
    <string name="dettagli_libro">Dettagli libro</string>
    <string name="ricerca_avanzata">Ricerca avanzata</string>
    <string name="cerca_parole_adiacenti">Cerca solo parole adiacenti</string>
    <string name="campo_da_ricercare">Campo da ricercare</string>
    <string name="lingua">Lingua</string>
    <string name="formato">Formato</string>
    <string name="area_disciplinare">Area disciplinare</string>
    <string name="da_anno">Dall\' anno</string>
    <string name="a_anno">all\' anno</string>
    <string name="titolo">Titolo</string>
    <string name="autore">Autore</string>
    <string name="posizione">Posizione</string>
    <string name="edizione">Edizione</string>
    <string name="pubblicazione">Pubblicazione</string>
    <string name="cdd">CDD</string>
    <string name="isbn">ISBN</string>
    <string name="serie">Serie</string>
    <string name="soggetto">Soggetto</string>
    <!-- end of Biblioteca -->

    <!-- TipoCorso -->
    <string name="tipo_corso">Seleziona corso di laurea</string>
    <string name="tipo_corso_title">Corso di laurea</string>
    <string name="tipo_corso_cambiato">Hai cambiato il corso di laurea da visualizzare</string>
    <!-- end of TipoCorso -->


    <!-- ActionBar -->
    <string name="cerca">Cerca</string>
    <string name="aggiorna">Aggiorna</string>
    <string name="cancella">Cancella</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="modifica">Modifica</string>
    <string name="accetta">Accetta</string>
    <string name="twitter">Twitter</string>
    <string name="feed">Feed RSS</string>
    <!-- end of ActionBar -->


    <!-- Da ordinare / Generale -->
    <string name="send_mail_sure">Risponderemo solo a mail riguardanti l\'applicazione Android.\nUnisa Connect non è in alcun modo legata all\'Università di Salerno!</string>
    <string name="problema_aprire_link">Impossibile aprire la pagina</string>
    <string name="email_chooser_titolo">Invia la mail con</string>
    <string name="controlla_connessione">Controlla la\nconnessione\nad internet</string>
    <string name="dati_errati">I dati di accesso non sono corretti</string>
    <string name="dati_errati_o_problema_gingerbread">Autenticazione fallita.\nE\' possibile che i dati di accesso non siano corretti, o che l\'accesso non sia possibile perchè si sta usando una versione Android troppo vecchia</string>
    <string name="inserire_dati_webmail">Inserire i dati di login per accedere alla WebMail Unisa</string>
    <string name="dati_non_validi">Dati non validi</string>
    <string name="dati_salvati">Dati salvati</string>
    <string name="logging_in">Login in corso</string>
    <string name="login_ok">Login completata</string>
    <string name="caricamento">Caricamento&#8230;</string>
    <string name="problema_di_connessione_generico">Si è verificato un errore nell\'eseguire la richiesta</string>
    <string name="cerca_staff_name">Cerca docente</string>
    <string name="aggiornato_oggi">Aggiornato oggi</string>
    <string name="aggiornato_ieri">Aggiornato ieri</string>
    <string name="aggiornato_il">Aggiornato il %1$s</string>
    <string name="aggiornato_alle">Aggiornato alle %1$s</string>
    <string name="aggiornato_ieri_alle">Aggiornato ieri alle %1$s</string>
    <string name="aggiornato_il_alle">Aggiornato il %1$s alle %2$s</string>
    <string name="card_list_empty">Nessun risultato</string>
    <string name="drawer_open">Apri il menu di navigazione</string>
    <string name="drawer_close">Chiudi il menu di navigazione</string>

</resources>
