<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:unisaconnect="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_search_button"
        android:showAsAction="always"
        android:visible="false"
        unisaconnect:actionViewClass="android.support.v7.widget.SearchView"
        unisaconnect:showAsAction="always"/>
    <item
        android:id="@+id/action_cancel_button"
        android:icon="@drawable/ic_action_cancel"
        android:showAsAction="always"
        android:title="@string/cancella"
        android:visible="true"
        unisaconnect:showAsAction="always"/>
    <item
        android:id="@+id/action_add_button"
        android:icon="@drawable/ic_action_add"
        android:showAsAction="ifRoom"
        android:title="@string/aggiungi"
        android:visible="true"
        unisaconnect:showAsAction="always"/>
    <item
        android:id="@+id/action_edit_button"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="ifRoom"
        android:title="@string/modifica"
        android:visible="true"
        unisaconnect:showAsAction="always"/>
    <item
        android:id="@+id/action_accept_button"
        android:icon="@drawable/ic_action_accept"
        android:showAsAction="always"
        android:title="@string/accetta"
        android:visible="true"
        unisaconnect:showAsAction="always"/>
    <item
        android:id="@+id/action_twitter_button"
        android:icon="@drawable/ic_action_twitter"
        android:showAsAction="ifRoom"
        android:title="@string/twitter"
        android:visible="true"
        unisaconnect:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_feed_button"
        android:icon="@drawable/ic_action_feed"
        android:showAsAction="ifRoom"
        android:title="@string/feed"
        android:visible="true"
        unisaconnect:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_refresh_button"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"
        android:title="@string/aggiorna"
        android:visible="true"
        unisaconnect:showAsAction="always"/>
    <item
        android:id="@+id/action_loading_animation"
        android:showAsAction="ifRoom"
        android:visible="false"
        unisaconnect:showAsAction="always"/>

</menu>