<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="left"
            android:text="@string/data_management_info"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/user"
            style="@android:style/TextAppearance.DeviceDefault.Widget.EditText"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:hint="@string/unisa_mail"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:textColor="@color/darker_gray"
            tools:ignore="NewApi" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/darker_gray" />

        <CheckBox
            android:id="@+id/loginAutomatica"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:checked="true"
            android:text="@string/login_automatica"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:textColorPrimary" />

        <TextView
            android:id="@+id/buttonSave"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@color/orange_actionbar"
            android:gravity="center"
            android:text="@string/save"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:textColorPrimaryInverse"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>