<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scroll"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <EditText
            android:id="@+id/testo"
            style="@style/MyEditTextWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:drawableLeft="@drawable/ic_action_search_black"
            android:gravity="left|center_vertical"
            android:hint="@string/cerca_libro"
            android:paddingBottom="2dp"/>

        <LinearLayout
            android:id="@+id/advanced_search_toggle_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:orientation="horizontal"
            android:padding="3dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:padding="0dp"
                android:scaleType="fitEnd"
                android:src="@drawable/ic_action_expand"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ricerca_avanzata"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/dark_gray"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/advanced_search_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:gravity="left|center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:text="@string/cerca_parole_adiacenti"/>

                <CheckBox
                    android:id="@+id/adjacent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text=""/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:gravity="left|bottom"
                android:orientation="vertical"
                android:paddingBottom="2dp"
                android:paddingTop="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/campo_da_ricercare"/>

                <Spinner
                    android:id="@+id/campo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:entries="@array/biblio_search_campo"
                    android:gravity="center"
                    android:padding="0dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:gravity="left|bottom"
                android:orientation="vertical"
                android:paddingBottom="2dp"
                android:paddingTop="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lingua"/>

                <Spinner
                    android:id="@+id/lingua"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/biblio_search_lingua"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:gravity="left|bottom"
                android:orientation="vertical"
                android:paddingBottom="2dp"
                android:paddingTop="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:text="@string/formato"/>

                <Spinner
                    android:id="@+id/formato"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/biblio_search_formato"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:gravity="left|bottom"
                android:orientation="vertical"
                android:paddingBottom="2dp"
                android:paddingTop="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:text="@string/area_disciplinare"/>

                <Spinner
                    android:id="@+id/area_disciplinare"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:entries="@array/biblio_search_area_disciplinare"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:gravity="left|bottom"
                android:orientation="horizontal"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/da_anno"/>

                <EditText
                    android:id="@+id/anno_da"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight=".5"
                    android:inputType="number"
                    android:maxLength="4"
                    android:maxWidth="300dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_anno"/>

                <EditText
                    android:id="@+id/anno_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight=".5"
                    android:inputType="number"
                    android:maxLength="4"
                    android:maxWidth="300dp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/button_search"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/orange_actionbar"
            android:gravity="center"
            android:text="@string/cerca"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:textColorPrimaryInverse"
            android:textStyle="bold"/>
    </LinearLayout>

</ScrollView>