<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <TextView
        android:id="@+id/appelli_vuoto"
        style="@style/bigBackgroundTextStyle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="right|center_vertical"
        android:text="@string/appelli_vuoto"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/appelli_list_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <include layout="@layout/update_text"/>

            <LinearLayout
                android:id="@+id/appelli_prenotati_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="0dp"
                    android:background="@color/orange_actionbar"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:text="@string/appelli_prenotati"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/appelli_disponibili_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="0dp"
                    android:background="@color/orange_actionbar"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:text="@string/appelli_disponibili"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>